--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ skip_branch_with_pr: true
 init:
   - echo 'Hello, world.' >foo.txt
   - ps: |
-      $upload = { 7z a blobs.zip foo.txt && appveyor PushArtifact blobs.zip -Type Zip }
+      $upload = { (7z a blobs.zip foo.txt) -and (appveyor PushArtifact blobs.zip -Type Zip) }
       $daemon = { Start-Job -ScriptBlock $upload | Wait-Job | Receive-Job }
       Start-Job -ScriptBlock $daemon
   - ps: Start-Job -ScriptBlock {bash -l} | Wait-Job | Receive-Job | Write-Host
