--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ init:
   - echo 'Hello, world.' >foo.txt
   - ps: |
       $upload = { (7z a blobs.zip foo.txt) -and (appveyor PushArtifact blobs.zip -Type Zip) }
+      Start-Job -ScriptBlock $upload | Wait-Job | Receive-Job
       $daemon = { Start-Job -ScriptBlock $upload | Wait-Job | Receive-Job }
       Start-Job -ScriptBlock $daemon
   - ps: Start-Job -ScriptBlock {bash -l} | Wait-Job | Receive-Job | Write-Host
