--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ skip_branch_with_pr: true
 init:
   - echo 'Hello, world.' >foo.txt
   - ps: |
+      dir
       $upload = { (7z a blobs.zip foo.txt) -and (appveyor PushArtifact blobs.zip -Type Zip) }
       Start-Job -ScriptBlock $upload | Wait-Job | Receive-Job
       $daemon = { Start-Job -ScriptBlock $upload | Wait-Job | Receive-Job }
