--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,8 @@ init:
       dir
       $upload = { (7z a blobs.zip foo.txt) -and (appveyor PushArtifact blobs.zip -Type Zip) }
       Start-Job -ScriptBlock $upload | Wait-Job | Receive-Job
-      $daemon = { Start-Job -ScriptBlock $upload | Wait-Job | Receive-Job }
-      Start-Job -ScriptBlock $daemon
+      #$daemon = { Start-Job -ScriptBlock $upload | Wait-Job | Receive-Job }
+      #Start-Job -ScriptBlock $daemon
   - ps: Start-Job -ScriptBlock {bash -l} | Wait-Job | Receive-Job | Write-Host
   - echo "%APPVEYOR_JOB_ID%"
   - ps: |
