--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ init:
   - ps: |
       Start-Process -NoNewWindow 7z -ArgumentList "a", "blobs.zip", "foo.txt"
       dir
-  - ps: Start-Process bash "-il"
+  - ps: Start-Process bash -ArgumentList "-il"
   - echo "%APPVEYOR_JOB_ID%"
   - ps: |
       $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
