--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,8 @@ init:
   - echo 'Hello, world.' >foo.txt
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
-      (7z a blobs.zip foo.txt > echo) -and (appveyor PushArtifact blobs.zip -Type Zip > echo)
+      7z a blobs.zip foo.txt
+      appveyor PushArtifact blobs.zip -Type Zip > echo
   - echo "%APPVEYOR_JOB_ID%"
   - ps: |
       $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
