--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,7 +24,7 @@ init:
       $jobEvent = Register-ObjectEvent $daemon StateChanged -Action {
         Write-Host ('Archive daemon has completed.') -foregroundcolor "magenta"
         $daemon | Get-Member
-        $result = Receive-Job -Job $job
+        $result = Receive-Job -Job $daemon
         $result.Count
         $result
         $result | Get-Member
