--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,9 +22,8 @@ init:
       }
       $daemon = Start-Job -ScriptBlock $archive
       $jobEvent = Register-ObjectEvent $daemon StateChanged -Action {
-        Write-Host ('Archive daemon has completed.') -foregroundcolor "magenta" -nonewline
         $result = Receive-Job -Job $daemon
-        Write-Host ($result | Out-String)
+        Write-Host ('Archive daemon has completed.') -foregroundcolor "magenta" -nonewline; Write-Host ($result | Out-String)
       }
   - echo "%APPVEYOR_JOB_ID%"
   - ps: |
