--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,7 +52,10 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        Set-Location $using:PWD;
+        Set-Location $using:APPVEYOR_BUILD_FOLDER;
+        Set-Location $env:APPVEYOR_BUILD_FOLDER;
+        cd $using:APPVEYOR_BUILD_FOLDER;
+        cd $env:APPVEYOR_BUILD_FOLDER;
         make -j 4 2>&1
         make -j 4 emake
         bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
