--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,15 +52,15 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        Set-Location $using:APPVEYOR_BUILD_FOLDER;
-        Set-Location $env:APPVEYOR_BUILD_FOLDER;
-        cd $using:APPVEYOR_BUILD_FOLDER;
-        cd $env:APPVEYOR_BUILD_FOLDER;
+        Set-Location $using:APPVEYOR_BUILD_FOLDER
+        Set-Location $env:APPVEYOR_BUILD_FOLDER
+        cd $using:APPVEYOR_BUILD_FOLDER
+        cd $env:APPVEYOR_BUILD_FOLDER
         make -j 4 2>&1
         make -j 4 emake
         bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
         $archive = {
-          Set-Location $using:PWD;
+          Set-Location $using:PWD
           7z a blobs.zip compileEGMf.dll emake.exe
           appveyor PushArtifact blobs.zip -Type Zip
         }
