--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
 install:
-  - setx "PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%"
+  - setx PATH "c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%"
   - echo %PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
