--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,8 +41,8 @@ install:
   - set MINGW_PREFIX=/mingw64
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
-  #- setx TERM ansi
-  #- setx GCC_COLORS 'error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
+  - setx TERM ansi
+  - setx GCC_COLORS 'error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
@@ -51,8 +51,7 @@ install:
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         # use our first job to build JDI and the CLI
-        bash -lc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 2>&1; make -j 4 emake 2>&1"
-        #bash -ilc "export TERM=ansi; set TERM=ansi; cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
+        bash -lc "export TERM=ansi; set TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 2>&1; make -j 4 emake 2>&1"
 
         # create a daemon job to zip and upload the blobs artifact while we start building the engine
         $archive = {
