--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,7 +69,7 @@ install:
         }
       } Else {
         # simply restore the archive from the first job of this same build using REST API
-        $blobsURL = https://ci.appveyor.com/api/buildjobs/$env:CACHE_JOB/artifacts/blobs.zip
+        $blobsURL = "https://ci.appveyor.com/api/buildjobs/$env:CACHE_JOB/artifacts/blobs.zip"
         appveyor DownloadFile $blobsURL -FileName blobs.zip
         dir
         7z x blobs.zip
