--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,10 +6,12 @@ test: off
 skip_branch_with_pr: true
 init:
   - echo "%APPVEYOR_JOB_ID%"
+  # store the name of the archive job in an environment variable
+  # this designates the first job of every build as the archive job
   - ps: |
       $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
-      $env:CACHE_JOB = (Invoke-RestMethod -Method Get -Uri $apiURL).build.jobs[0].jobId
-  - echo "%CACHE_JOB%"
+      $env:ARCHIVE_JOB = (Invoke-RestMethod -Method Get -Uri $apiURL).build.jobs[0].jobId
+  - echo "%ARCHIVE_JOB%"
   - cd %APPVEYOR_BUILD_FOLDER%
 environment:
   OUTPUT: /tmp/test.exe
@@ -41,9 +43,6 @@ install:
   - set MINGW_PREFIX=/mingw64
   - set MINGW_CHOST=x86_64-w64-mingw32
   - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
-  - set TERM=ansi
-  - setx TERM ansi
-  - setx GCC_COLORS 'error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
   - >
     pacman --noconfirm -S mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis
     mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme
@@ -52,12 +51,10 @@ install:
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         # use our first job to build JDI and the CLI
-        $env:TERM=ansi;
-        $TERM=ansi;
-        [Environment]::SetEnvironmentVariable("TERM", "ansi", "Machine")
-        bash -lc "export TERM=ansi; set TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 2>&1; make -j 4 emake 2>&1"
+        bash -lc "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4; make -j 4 emake"
 
-        # create a daemon job to zip and upload the blobs artifact while we start building the engine
+        # create a daemon PowerShell "job" (not the same as an AppVeyor build job) to zip and upload
+        # the blobs artifact while we start building the engine
         $archive = {
           Set-Location $using:PWD
           7z a blobs.zip compileEGMf.dll emake.exe
@@ -65,19 +62,19 @@ install:
         }
         $daemon = Start-Job -ScriptBlock $archive
 
-        # register a callback so we can output the result of the archive when the daemon completes
+        # register a callback so we can show the zip and upload output when it completes
         $jobEvent = Register-ObjectEvent $daemon StateChanged -Action {
           $result = Receive-Job -Job $daemon
           Write-Host ('Archive daemon has completed.') -foregroundcolor "Magenta"
           Write-Host ($result | Out-String) -foregroundcolor "Gray"
         }
       } Else {
-        # simply restore the archive from the first job of this same build using REST API
-        $blobsURL = "https://ci.appveyor.com/api/buildjobs/$env:CACHE_JOB/artifacts/blobs.zip"
+        # simply restore JDI and the CLI from the achive artifact of this same build using REST API
+        $blobsURL = "https://ci.appveyor.com/api/buildjobs/$env:ARCHIVE_JOB/artifacts/blobs.zip"
         appveyor DownloadFile $blobsURL -FileName blobs.zip
         dir
         7z x blobs.zip
       }
 build_script:
   # AppVeyor overrides %PLATFORM% because it's part of its API, so export it
-  - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh 2>&1"
+  - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
