--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,7 +69,7 @@ install:
           Write-Host ($result | Out-String) -foregroundcolor "Gray"
         }
       } Else {
-        # simply restore JDI and the CLI from the achive artifact of this same build using REST API
+        # simply restore JDI and the CLI from the archive artifact of this same build using REST API
         $blobsURL = "https://ci.appveyor.com/api/buildjobs/$env:ARCHIVE_JOB/artifacts/blobs.zip"
         appveyor DownloadFile $blobsURL -FileName blobs.zip
         7z x blobs.zip
