--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,9 @@ shallow_clone: true
 # disable automatic tests
 test: off
 # don't build "feature" branches
-skip_branch_with_pr: true
+branches:
+  only:
+    - master
 init:
   - echo "%APPVEYOR_JOB_ID%"
   # store the name of the archive job in an environment variable
