Reorganize IPC folders Move all the resources into folders like the old backend. Modified the Makefile to include the directories to make the files less verbose. Added Project schema to contain vectors of all the resources.

--- a/CompilerSource/ipc/Makefile
+++ b/CompilerSource/ipc/Makefile
@@ -1,8 +1,8 @@
 
 codegen/%_generated.h: %.fbs
-	flatc -o codegen --cpp $<
+	flatc -I util -I resources -o codegen --cpp $<
 
-SOURCES := $(wildcard *.fbs)
+SOURCES := $(shell find -name '*.fbs')
 GENERATED := $(addprefix codegen/,$(SOURCES:.fbs=_generated.h))
 
 .PHONY: regenerate-flatbuffers
