--- a/ENIGMAsystem/SHELL/Platforms/xlib/Makefile
+++ b/ENIGMAsystem/SHELL/Platforms/xlib/Makefile
@@ -1,2 +1,2 @@
-SOURCES += $(wildcard Platforms/xlib/*.cpp) Platforms/General/POSIXthreads.cpp Platforms/General/UNIXfilemanip.cpp
+SOURCES += $(wildcard Platforms/xlib/*.cpp) $(wildcard Platforms/POSIX/*.cpp)
 LDLIBS += -lz -lpthread -lX11
