--- a/.travis.yml
+++ b/.travis.yml
@@ -43,244 +43,17 @@ env:
 matrix:
   include:
 #BEGIN OSX
-  - os: osx
-    osx_image: xcode9.2
-    env: 
-    - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
+  - { os: osx, osx_image: xcode9.2,
+      env: { COMPILER: gcc, PLATFORM: None, MODE: Debug, GRAPHICS: None, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: None } }
 #END OSX
-
+ 
 #BEGIN LINUX
   # Game Modes
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Run GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Compile GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  # Compilers
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc32 PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=clang PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=clang32 PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  # Graphics
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL3 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  # Audio
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=OpenAL COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=SFML COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  # Networking
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=Asynchronous WIDGETS=None EXTENSIONS="None"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=BerkeleySockets WIDGETS=None EXTENSIONS="None"
-  
-  # Widgets
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=GTK+ EXTENSIONS="None"
-  
-  # Collision
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=BBox NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=Precise NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  # Extensions
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="Alarms"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="DataStructures,Asynchronous"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=GTK+ EXTENSIONS="BasicGUI"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="Box2DPhysics"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="BulletDynamics"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="DataStructures"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="DateTime"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="GM5Compat"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=OpenAL COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="GME"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=SFML COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="GME"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="IniFilesystem"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="DataStructures,Json"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="MatrixMath"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=BBox NETWORK=None WIDGETS=None EXTENSIONS="Paths"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=BBox NETWORK=None WIDGETS=None EXTENSIONS="Paths,MotionPlanning"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=Precise NETWORK=None WIDGETS=None EXTENSIONS="Paths,MotionPlanning"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="ParticleSystems"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL3 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="ParticleSystems"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL3 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="StudioPhysics"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="Timelines"
-  
-  # Cross Compile
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=MinGW32 PLATFORM=Win32 MODE=Run GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=MinGW64 PLATFORM=Win32 MODE=Run GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-  
-  # The big ol' None test.
-  - os: linux
-  sudo: required
-  dist: trusty
-  env:
-  - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
+  - { os: linux, sudo: required, dist: trusty,
+      env: { COMPILER: gcc, PLATFORM: xlib, MODE: Run, GRAPHICS: OpenGL1, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: None } }
+ 
+  - { os: linux, sudo: required, dist: trusty,
+      env: { COMPILER: gcc, PLATFORM: xlib, MODE: Debug, GRAPHICS: OpenGL1, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: None } }
 
 script:
   - ./ci-build.sh
