--- a/ENIGMAsystem/SHELL/Universal_System/Makefile
+++ b/ENIGMAsystem/SHELL/Universal_System/Makefile
@@ -1,3 +1,6 @@
-SOURCES += $(wildcard Universal_System/*.cpp) $(wildcard Universal_System/Resources/*.cpp) $(wildcard Universal_System/Resources/Objects/*.cpp)
+SOURCES += $(wildcard Universal_System/*.cpp)\
+			$(wildcard Universal_System/Resources/*.cpp)\
+			$(wildcard Universal_System/Resources/Objects/*.cpp)\
+			$(wildcard Universal_System/Instances/*.cpp)
 LDLIBS += -lz
 CLEANDEPS += $(OBJDIR)/Universal_System/loading.o
